jdk8的API适配